--- a/package.json
+++ b/package.json
@@ -66,6 +66,7 @@
     "lint-staged": "^13.0.4",
     "postcss": "8.4.20",
     "prettier": "^2.8.0",
+    "pretty-quick": "3.1.3",
     "sass-loader": "^13.2.0",
     "style-loader": "^3.3.1",
     "tailwindcss": "3.2.4",
@@ -82,12 +83,9 @@
     }
   },
   "lint-staged": {
-    "**/*.{js,jsx,ts,tsx}": [
-      "eslint --fix",
-      "prettier --write --ignore-unknown"
-    ],
-    "**/*.{md,mdx,json,css,scss}": [
-      "prettier --write --ignore-unknown"
+    "*.{js,jsx,ts,tsx,json,css,scss,md}": [
+      "pretty-quick --staged",
+      "prettier --write"
     ]
   }
 }
