--- a/package.json
+++ b/package.json
@@ -83,9 +83,12 @@
     }
   },
   "lint-staged": {
-    "*.{js,jsx,ts,tsx,json,css,scss,md}": [
-      "pretty-quick --staged",
-      "prettier --write"
+    "**/*.{js,jsx,ts,tsx}": [
+      "eslint --fix",
+      "prettier --write --ignore-unknown"
+    ],
+    "**/*.{md,mdx,json,css,scss}": [
+      "prettier --write --ignore-unknown"
     ]
   }
 }
