--- a/package.json
+++ b/package.json
@@ -83,9 +83,9 @@
     }
   },
   "lint-staged": {
-    "*.{js,jsx,ts,tsx,json,css,scss,md}": [
-      "pretty-quick --staged",
-      "prettier --write"
+    "**/*.{js,jsx,ts,tsx,md,mdx,json,css,scss}": [
+      "eslint --ignore-path .gitignore \"src/**/*.+(ts|js|tsx|jsx)\" --fix",
+      "prettier --ignore-path .gitignore \"src/**/*.+(ts|js|tsx|jsx)\" --write --ignore-unknown"
     ]
   }
 }
