--- a/package.json
+++ b/package.json
@@ -66,7 +66,6 @@
     "lint-staged": "^13.0.4",
     "postcss": "8.4.20",
     "prettier": "^2.8.0",
-    "pretty-quick": "3.1.3",
     "sass-loader": "^13.2.0",
     "style-loader": "^3.3.1",
     "tailwindcss": "3.2.4",
@@ -75,7 +74,8 @@
     "webpack": "^5.75.0"
   },
   "resolutions": {
-    "html-webpack-plugin": "^5.5.0"
+    "html-webpack-plugin": "^5.5.0",
+    "husky": "^4.3.8"
   },
   "husky": {
     "hooks": {
