--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "lovevery-next",
-  "description": "lovevery next app",
+  "description": "next shop app",
   "version": "0.0.1",
   "private": true,
   "author": "",
@@ -24,7 +24,8 @@
     "next-seo": "5.15.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "sass": "^1.56.1"
+    "sass": "^1.56.1",
+    "swr": "2.0.0"
   },
   "devDependencies": {
     "@babel/plugin-proposal-private-property-in-object": "^7.20.5",
